endpoints balanc, contracts, get contract

--- a/settings/config.ini
+++ b/settings/config.ini
@@ -6,3 +6,10 @@ password = 009007
 bot_token = 1665637466:AAH0AJP_xmjwtlxu38g0MKeicTw3i7OSd3w
 bot_support = https://t.me/tk_milionario
 phone = +5574981199190
+
+[api_info]
+title='Gestão Telegram'
+version = '1.0.0'
+docs_url='/docs'
+description='''Gerenciar usuários do grupo telegram telegram de acordo com status de cada usuário nas plataformas de Marketplace:
+                Eduzz, Braip, Hotmart, Kiwify e TK Global (Plataforma própria)''',
