--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ bot_token = '1665637466:AAH0AJP_xmjwtlxu38g0MKeicTw3i7OSd3w'
 telegram_support = 'https://t.me/tk_milionario'
 phone = '+5574981199190'
 
+url_base = 'http://127.0.0.1:8000/api/v1'
+
 # Config Email
 email_send = "tekertudo@gmail.com"
 email_password = "lbrkulimopjljajs"
