--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ url_base = 'http://127.0.0.1:8000/api/v1'
 
 # Config Email
 email_send = "tekertudo@gmail.com"
-email_password = "lbrkulimopjljajs"
+email_password = "lbrkuajs"
 
 # Api Edduz https://api2.eduzz.com/#documentationgetting_started
 edduz_email = 'lukasmulekezika2@gmail.com'
